# datacontract-specification-python

./: MANIFEST.in  README.md  data_contract_specification.py  pyproject.toml  test_data_contract_specification.py
.github/workflows/: ci.yaml  release.yaml
src/datacontract_specification/: data_contract_specification.py  model.py  test_data_contract_specification.py
